corrige path do index.js para src/index.js

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sistemaocorrencias",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "backend/index.js",
   "scripts": {
     "start": "node backend/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
