--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.48",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.0",
     "pdfkit": "^0.16.0",
